# database-lab-project

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-release.yml  build-report.yml
data/: courses.json  degree_programs.json  departments.json  prerequisites.json
report/: report.tex
report/sections/: 1_introduction.tex  2_requirements_analysis.tex  3_conceptual_design.tex  3_glossary.tex  4_conceptual_design.tex  4_schema_restructuring.tex  5_logical_design.tex  5_normalization.tex  5_schema_restructuring.tex  6_logical_design.tex  6_normalization.tex  6_physical_design.tex  7_logical_design.tex  7_physical_design.tex  7_queries.tex  8_conclusions.tex  8_physical_design.tex  8_queries.tex  9_queries.tex  a1_glossary.tex  a2_requirements_traceability.tex
schemas/: logical_model.pdf:Zone.Identifier
schemas/logical/: logical_model.dbml  logical_model.md
sql/: 01_schema.sql  02_triggers.sql  03_indexes.sql  03_queries.sql  04_indexes.sql  04_queries.sql
src/: Dockerfile  init.sql  main.py  populate.py  redundancy_analysis.py
