[project]
name = "database-lab-project"
version = "0.1.0"
description = "Data generation script for the database-lab-project PostgreSQL schema"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=40.19.1",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.50",
]
